# ZameEngine

./: .clang-format  CMakeLists.txt  Containerfile.dev  Containerfile.dev-hosting  README.md  ZameEngine.drawio  entrypoint.sh  nginx.conf
.devcontainer/: devcontainer.json
assets/shaders/: fragment.glsl  vertex.glsl
src/aiya/: game.cpp  game.hpp  main.cpp
src/engine/: entity.cpp  entity.hpp
src/engine/attack-system/: attack_system.cpp  attack_system.hpp
src/engine/components/: attack_component.hpp  component_registry.hpp  input_codes.hpp  input_component.hpp  sprite_component.hpp  transform_component.hpp  walk_component.hpp
src/engine/input-system/: input_system.cpp  input_system.hpp
src/engine/render-system/: render_system.cpp  render_system.hpp  shader_program.cpp  shader_program.hpp  texture.cpp  texture.hpp  window.cpp  window.hpp
src/engine/walk-system/: walk_system.cpp  walk_system.hpp
tests/: input_component_test.cpp
web/: index.html
